--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.265.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "4"
