--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -13,6 +13,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
+    "baseUrl": "./src",
+    "paths": {
+      "@views/*": ["./views/*"],
+      "@components/*": ["./components/*"],
+      "@store/*": ["./store/*"]
+    },
 
     /* Linting */
     "strict": true,
