--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:olajoao/itold.git",
+  "author": "João Küster <kusterzito@gmail.com>",
+  "license": "MIT"
 }
