--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,45 @@
 {
-  "rules": {
-    "semi": [
-      "error",
-      "always"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:vue/vue3-essential"
     ],
-    "quotes": [
-      "error",
-      "double"
-    ]
-  }
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "parser": "@typescript-eslint/parser",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "vue"
+    ],
+    "rules": {
+        "semi": [
+            "error",
+            "always"
+        ],
+        "quotes": [
+            "error",
+            "double"
+        ],
+        "no-unused-vars": "error",
+        "arrow-body-style": [
+            "error",
+            "as-needed"
+        ],
+        "complexity": [
+            "error",
+            3
+        ],
+        "no-shadow": "error",
+        "max-params": [
+            "error",
+            3
+        ],
+        "no-nested-ternary": "error"
+    }
 }
