--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "axios": "^1.4.0",
     "lucide-vue-next": "^0.265.0",
     "pinia": "^2.1.6",
+    "ts-node": "^10.9.1",
     "vue": "^3.3.4",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
